--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   },
   "devDependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@types/vue2-datepicker": "^3.3.1",
     "babel-eslint": "^10.1.0",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -44,13 +43,11 @@
     "laravel-mix": "^5.0.1",
     "laravel-mix-eslint": "^0.1.3",
     "lint-staged": "^9.2.5",
-    "node-sass": "^4.13.0",
     "resolve-url-loader": "^3.1.0",
     "sass-loader": "^8.0.0",
     "script-loader": "^0.7.2",
     "svg-sprite-loader": "^4.3.0",
     "vue-template-compiler": "2.6.10",
-    "vuetable-2": "^1.7.5",
     "webpack": "^4.44.1",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-chunk-rename-plugin": "^1.0.3",
@@ -62,15 +59,15 @@
     "axios": "^0.24.0",
     "babel-loader": "^8.1.0",
     "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.4",
+    "bootstrap-vue": "^2.21.2",
     "bootstrap-vue-treeview": "^1.0.8",
     "c3": "^0.7.11",
-    "chart.js": "^2.9.2",
+    "chart.js": "2.9.4",
     "chartist": "^0.11.4",
     "clipboard": "^2.0.6",
     "compass-mixins": "^0.12.10",
     "core-js": "^3.6.5",
-    "css-loader": "^3.6.0",
+    "css-loader": "3.6.0",
     "datatables.net-bs4": "^1.10.20",
     "dragula": "^3.7.2",
     "driver.js": "^0.9.7",
@@ -91,16 +88,13 @@
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^3.1.0",
-    "screenfull": "^4.2.1",
-    "simple-line-icons": "^2.4.1",
+    "screenfull": "4.2.1",
+    "simple-line-icons": "2.4.1",
     "sortablejs": "^1.10.2",
-    "ti-icons": "^0.1.2",
     "tui-editor": "^1.4.6",
-    "v-clipboard": "^2.2.2",
     "vue": "2.6.10",
-    "vue-c3": "^1.2.11",
     "vue-chartist": "^2.2.1",
-    "vue-chartjs": "^3.5.0",
+    "vue-chartjs": "^3.5.1",
     "vue-clipboard2": "^0.3.1",
     "vue-codemirror": "^4.0.6",
     "vue-context": "^5.0.0",
@@ -115,21 +109,21 @@
     "vue-loader": "^15.9.3",
     "vue-router": "^3.4.3",
     "vue-runtime-helpers": "^1.1.2",
-    "vue-slide-bar": "^1.2.0",
-    "vue-slider-component": "^3.0.43",
-    "vue-snotify": "^3.2.1",
-    "vue-sorted-table": "^1.2.0",
+    "vue-slide-bar": "1.2.0",
+    "vue-slider-component": "3.0.43",
+    "vue-snotify": "3.2.1",
+    "vue-sorted-table": "1.2.0",
     "vue-splitpane": "^1.0.4",
     "vue-star-rating": "^1.6.1",
-    "vue-sweetalert2": "^2.1.5",
+    "vue-sweetalert2": "^5.0.2",
     "vue-trix": "github:hanhdt/vue-trix",
     "vue2-ace-editor": "0.0.15",
-    "vue2-datepicker": "^3.10.4",
+    "vue2-datepicker": "3.10.4",
     "vue2-dragula": "^2.5.4",
     "vue2-google-maps": "^0.10.7",
     "vuedraggable": "^2.24.0",
     "vuelidate": "^0.7.4",
-    "vuex": "^3.1.1",
+    "vuex": "3.1.1",
     "xlsx": "^0.17.4"
   },
   "browserslist": [
