--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "clipboard": "^2.0.6",
     "compass-mixins": "^0.12.10",
     "core-js": "^3.6.5",
-    "css-loader": "3.6.0",
+    "css-loader": "^3.6.0",
     "datatables.net-bs4": "^1.10.20",
     "dragula": "^3.7.2",
     "driver.js": "^0.9.7",
@@ -91,6 +91,7 @@
     "screenfull": "4.2.1",
     "simple-line-icons": "2.4.1",
     "sortablejs": "^1.10.2",
+    "ti-icons": "0.1.2",
     "tui-editor": "^1.4.6",
     "vue": "2.6.10",
     "vue-chartist": "^2.2.1",
