--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -14,7 +14,7 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
       with:
-        server: ftp.eloope.com
+        server: ftpes://ftp.eloope.com
         username: ${{ secrets.ftp_username}}
         password: ${{ secrets.ftp_password }}
         server-dir: /
