--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -14,8 +14,8 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
       with:
-        server: ftp.eloope.com
+        server: ftp.portablaze.com
         username: ${{ secrets.ftp_username}}
         password: ${{ secrets.ftp_password }}
         protocol: ftps
-        server-dir: /
+        server-dir: /public_html/
