--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,5 +17,5 @@ jobs:
         server: ftp.portablaze.com
         username: ${{ secrets.ftp_username}}
         password: ${{ secrets.ftp_password }}
-        protocol: ftps
+        protocol: ftp
         server-dir: /public_html/
