--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -18,4 +18,4 @@ jobs:
         username: ${{ secrets.ftp_username}}
         password: ${{ secrets.ftp_password }}
         protocol: ftp
-        server-dir: /public_html/
+        server-dir: /public_html/elp/
