--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -14,8 +14,7 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
       with:
-        server: ftp.portablaze.com
+        server: win8026.site4now.net
         username: ${{ secrets.ftp_username}}
         password: ${{ secrets.ftp_password }}
-        protocol: ftp
-        server-dir: /public_html/elp/
+        server-dir: /site1/
