--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,4 +17,4 @@ jobs:
         server: win8026.site4now.net
         username: ${{ secrets.ftp_username}}
         password: ${{ secrets.ftp_password }}
-        server-dir: /site1/
+        server-dir: /site1/elp/
